--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
-    "next": "16.1.2",
+    "next": "^16.1.1-canary.31",
     "next-auth": "^5.0.0-beta.30",
     "react": "19.2.3",
     "react-dom": "19.2.3",
