--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"node server/index.js\"",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
@@ -11,9 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.18",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
