--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.5",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
